--- a/frontend/teams/package.json
+++ b/frontend/teams/package.json
@@ -12,7 +12,8 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
-    "vue": "^3.3.4"
+    "vue": "^3.3.4",
+    "vue-toastification": "^1.7.14"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.2.0",
