--- a/frontend/teams/package.json
+++ b/frontend/teams/package.json
@@ -17,8 +17,7 @@
     "@fortawesome/vue-fontawesome": "^3.0.3",
     "axios": "^1.4.0",
     "vue": "^3.3.4",
-    "vue-js-modal": "^2.0.1",
-    "vue-toastification": "^1.7.14"
+    "vue-toastification": "^2.0.0-rc.5"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.2.0",
